Fix some files fot visibility of code

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -13,6 +13,13 @@ p, ol, ul, td {
   line-height: 18px;
 }
 
+.b {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: bold;
+}
+
 pre {
   background-color: #eee;
   padding: 10px;
